# securedrop-signal-poc

./: Cargo.toml  Makefile  README.md  journalist.py  journalist2.py  requirements.in  requirements.txt  source.py
securedrop-source/: Cargo.toml  README.md  index.html
securedrop-source/src/: lib.rs
