[package]
name = "securedrop-source"
version = "0.1.0"
authors = ["redshiftzero <jen@freedom.press>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libsignal-protocol-rust = { git = "https://github.com/freedomofpress/libsignal-client", rev="c1331eb42f71184996e3994b52023a40ec47c0dd" }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
hex = "0.4.2"
console_error_panic_hook = "0.1.6"
getrandom = { version = "*", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]