[package]
name = "securedrop-source"
version = "0.1.0"
authors = ["redshiftzero <jen@freedom.press>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libsignal-protocol-rust = { git = "https://github.com/freedomofpress/libsignal-client", rev="609a1de73380a2b9d314db625e6b2f0368e838ec" }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
hex = "0.4.2"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.2", features = ["wasm-bindgen", "js"] }
futures = "0.3.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
