[package]
name = "securedrop-source"
version = "0.1.0"
authors = ["redshiftzero <jen@freedom.press>"]
edition = "2021"
rust-version = "1.56.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.2.1"
libsignal-protocol-rust = { git = "https://github.com/freedomofpress/libsignal-client", rev="609a1de73380a2b9d314db625e6b2f0368e838ec" }
zkgroup = { git = "https://github.com/signalapp/zkgroup", rev="ff26ac3679329e182772eed3f51797d91f963c3b" }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
hex = "0.4.2"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.1.15", features = ["wasm-bindgen"] }
futures = "0.3.7"
uuid = "0.8.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
